[metadata]
name = compliance-kubernetes
description = Compliance Operator applications to an OpenShift cluster, with measurements
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
license_file = LICENSE
url = https://github.com/jharmison-redhat/compliance-kubernetes
author = James Harmison
author_email = jharmison@redhat.com

[options]
python_requires = >= 3.9
package_dir =
    =src
packages = find:
zip_safe = False
install_requires =
    click
    click-default-group
    requests
    kubernetes
    PyYAML
    pydantic
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    compliance-kubernetes = compliance_kubernetes.cli:main
